--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+protobuf==3.20.*
 langchain==0.3.0
 langchain_community==0.3.0
 langchain_openai==0.2.0
 pandas==1.5.3
 streamlit==1.38.0
-chromadb==0.5.3
+chromadb
