--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ langchain_community==0.3.0
 langchain_openai==0.2.0
 pandas==1.5.3
 streamlit==1.38.0
-chromadb
+chromadb==0.3.29
+chroma-hnswlib==0.7.3
