--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-protobuf==3.20.*
-langchain==0.3.0
-langchain_community==0.3.0
-langchain_openai==0.2.0
-pandas==1.5.3
-streamlit==1.38.0
-chromadb==0.5.3
+langchain==0.1.9
+langchain-community==0.0.24
+langchain-openai==0.0.8
+pandas==2.2.1
+streamlit==1.31.1
 chroma-hnswlib==0.7.3
+chromadb==0.3.29
